CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (CPPLOG)
SET (PROJECT_VERSION 0.1.0)

INCLUDE(GNUInstallDirs)

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)
SET_TARGET_PROPERTIES (${PROJECT_EXECUTABLES} PROPERTIES LINKER_LANGUAGE CXX)

# Find and use the system's Boost library
FIND_PACKAGE (Boost REQUIRED COMPONENTS system thread)
INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIR})
LINK_DIRECTORIES (${Boost_LIBRARY_DIRS})

SET (CPPLOG_HEADERS
    concurrent_queue.hpp
    cpplog.hpp
    outputdebugstream.hpp
    scribestream.hpp
)

ADD_DEFINITIONS (-DCPPLOG_THREADING -DCPPLOG_SYSTEM_IDS)

OPTION (BUILD_TESTS "Build the test executables" OFF)

IF (BUILD_TESTS)
    ADD_EXECUTABLE(cpplog_test "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp" ${CPPLOG_HEADERS})
    TARGET_LINK_LIBRARIES(cpplog_test ${Boost_LIBRARIES})
ENDIF (BUILD_TESTS)

# Install headers
INSTALL (
    FILES ${CPPLOG_HEADERS}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/cpplog
)

# Install pkg-config file
CONFIGURE_FILE (
    ${CMAKE_CURRENT_SOURCE_DIR}/cpplog.pc.cmake
    ${CMAKE_CURRENT_BINARY_DIR}/cpplog.pc @ONLY
)
INSTALL (
    FILES  ${CMAKE_BINARY_DIR}/cpplog.pc
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
    COMPONENT pkgconfig
)
